--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
         <li>
             <a href="/lectures">Lectures</a>
         </li>
+        <li>
+            <a href="https://github.com/StormAngel94/chadbourne-john-webdev">Site GitHub</a>
+        </li>
     </ul>
 </body>
 </html>
