--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,1 +1,8 @@
 <h1>Assignment Home Page</h1>
+
+<h2>Links to Assignment Pages</h2>
+<ul>
+    <li>
+        <a href="./assignment1/login.html">Assignment 1</a>
+    </li>
+</ul>
