--- a/public/assignment/assignment1/login.html
+++ b/public/assignment/assignment1/login.html
@@ -5,6 +5,7 @@
     <title>Assignment 1: Login</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./style.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="general">
