--- a/public/assignment/assignment1/login.html
+++ b/public/assignment/assignment1/login.html
@@ -21,12 +21,11 @@
                type="password"
                placeholder="password"
                class="form-control general"/>
-        <button type="submit"
-                class="btn btn-block btn-primary general">
-            Login
-        </button>
     </form>
-
+        <a href="profile.html"
+           class="btn btn-block btn-primary general">
+            Login
+        </a>
     <a href="./register.html"
        class="btn btn-block btn-primary register">
         Register
