--- a/public/assignment/assignment1/profile.html
+++ b/public/assignment/assignment1/profile.html
@@ -20,5 +20,59 @@
         </h1>
         </div>
     </div>
+
+    <div class="main general">
+        <form method="post" action="data/profile">
+            <label for="username">
+                Username:
+            </label>
+            <input name="username"
+                   value="jchadbourne"
+                   id="username"
+                   type="text"
+                   placeholder="Username"
+                   class="form-control general"/>
+            <label for="email">
+                Email:
+            </label>
+            <input name="email"
+                   value="chadbourne.jo@husky.neu.edu"
+                   id="email"
+                   type="text"
+                   placeholder="Email"
+                   class="form-control general"/>
+            <label for="fName">
+                First Name:
+            </label>
+            <input name="fName"
+                   value="John"
+                   id="fName"
+                   type="text"
+                   placeholder="First Name"
+                   class="form-control general"/>
+            <label for="lName">
+                Last Name:
+            </label>
+            <input name="lName"
+                   value="Chadbourne"
+                   id="lName"
+                   type="text"
+                   placeholder="Last Name"
+                   class="form-control general"/>
+        </form>
+        <a href="./website-list.html"
+           class="btn btn-block btn-primary">
+            Websites
+        </a>
+        <a href="./login.html"
+           class="btn btn-block btn-primary cancel">
+            Logout
+        </a>
+    </div>
+    <div class="footer">
+        <div class="right floatVertical">
+            <img src="./PersonProfile.png" class="tiny">
+        </div>
+    </div>
 </body>
 </html>
