--- a/public/assignment/assignment1/login.html
+++ b/public/assignment/assignment1/login.html
@@ -11,11 +11,17 @@
     <div class="general">
     <h1 class="general">Login</h1>
     <form method="post" action="/data/login/">
+        <label for="username">
+            Username
+        </label>
         <input name="username"
                id="username"
                type="text"
                placeholder="username"
                class="form-control general"/>
+        <label for="password">
+            Password
+        </label>
         <input name="password"
                id="password"
                type="password"
