--- a/public/assignment/assignment1/profile.html
+++ b/public/assignment/assignment1/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile</title>
+    <title>Assignment 1: Profile</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./style.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,7 +74,9 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container footer">
             <div class="right floatVertical">
-                <img src="./PersonProfile.png" class="tiny">
+                <a href="./profile.html">
+                    <img src="./PersonProfile.png" class="tiny">
+                </a>
             </div>
         </div>
     </nav>
