--- a/public/assignment/assignment1/pages-list.html
+++ b/public/assignment/assignment1/pages-list.html
@@ -12,12 +12,12 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                <a href="./profile.html" class="normal"><   </a>Websites
+                <a href="./website-list.html" class="normal"><   </a>Pages
             </h1>
         </div>
         <div class="right">
             <h1 class="rightHeader">
-                <a href="./website-new.html" class="normal">+</a>
+                <a href="./page-new.html" class="normal">+</a>
             </h1>
         </div>
     </div>
@@ -26,33 +26,41 @@
 <div class="main general">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="./pages-list.html">Address Book App</a>
+            <a href="./widgets-list.html">Blog Post</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogger</a>
+            <a href="./widgets-list.html">Blogs</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogging App</a>
+            <a href="./widgets-list.html">Home</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Script Testing App</a>
+            <a href="./widgets-list.html">About</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
+                    <img src="GearBlue.png" class="miniscule">
+                </a>
+            </span>
+        </li>
+        <li class="list-group-item">
+            <a href="./widgets-list.html">Contact Us</a>
+            <span class="right">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
