--- a/public/assignment/assignment1/widgets-list.html
+++ b/public/assignment/assignment1/widgets-list.html
@@ -12,12 +12,12 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                <a href="./profile.html" class="normal"><   </a>Websites
+                <a href="./pages-list.html" class="normal"><   </a>Widget List
             </h1>
         </div>
         <div class="right">
             <h1 class="rightHeader">
-                <a href="./website-new.html" class="normal">+</a>
+                <a href="./widgets-chooser.html" class="normal">+</a>
             </h1>
         </div>
     </div>
@@ -26,36 +26,39 @@
 <div class="main general">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="./pages-list.html">Address Book App</a>
+            <a href="./widgets-heading.html">Heading</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
+            <h3>Team JNPR</h3>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogger</a>
+            <a href="./widgets-image.html">Image</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
+            <h3></h3>
+            <img src="https://cdn.discordapp.com/attachments/266020118385917952/335585804061638687/jnpr_team_wallpaper_by_dantherrien101-d8kn02l.png"
+                 width="50%">
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogging App</a>
+            <a href="./widgets-youtube.html">Youtube</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
-        </li>
-        <li class="list-group-item">
-            <a href="./pages-list.html">Script Testing App</a>
-            <span class="right">
-                <a href="./website-edit.html">
-                    <img src="GearBlue.png" class="miniscule">
-                </a>
-            </span>
+            <h3></h3>
+            <iframe width="50%"
+                    height="315"
+                    src="https://www.youtube.com/embed/5_BF789hJuE"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe>
         </li>
     </ul>
 </div>
