--- a/public/assignment/assignment1/page-edit.html
+++ b/public/assignment/assignment1/page-edit.html
@@ -12,7 +12,7 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                Edit Website
+                Edit Page
             </h1>
         </div>
         <div class="right">
@@ -27,33 +27,41 @@
 <div class="sidebar">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="./pages-list.html">Address Book App</a>
+            <a href="./widgets-list">Blog Post</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogger</a>
+            <a href="./widgets-list">Blogs</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogging App</a>
+            <a href="./widgets-list">Home</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Script Testing App</a>
+            <a href="./widgets-list">About</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
+                    <img src="GearBlue.png" class="miniscule">
+                </a>
+            </span>
+        </li>
+        <li class="list-group-item">
+            <a href="./widgets-list">Contact Us</a>
+            <span class="right">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
@@ -63,21 +71,22 @@
 
 <div class="general main withsidebar">
     <form method="post" action="/data/edit/">
-        <label for="webname">
-            Website Name:
+        <label for="pagename">
+            Page Name:
         </label>
-        <input name="webname"
-               id="webname"
-               type="url"
+        <input name="pagename"
+               id="pagename"
+               type="text"
                placeholder="Website Name"
                class="form-control general"/>
-        <label for="description">
-            Website Description:
+        <label for="title">
+            Page Title:
         </label>
-        <textarea name="description"
-                id="description"
-                placeholder="Describe your website..."
-                class="form-control general large"></textarea>
+        <input name="title"
+                id="title"
+                type="text"
+                placeholder="The title of this page"
+                class="form-control general large">
     </form>
     <a href="./website-list.html"
        class="btn btn-block btn-primary">
