--- a/public/assignment/assignment1/widgets-chooser.html
+++ b/public/assignment/assignment1/widgets-chooser.html
@@ -12,12 +12,7 @@
     <div class="container header">
         <div class="left">
             <h1 class="leftHeader">
-                <a href="./profile.html" class="normal"><   </a>Websites
-            </h1>
-        </div>
-        <div class="right">
-            <h1 class="rightHeader">
-                <a href="./website-new.html" class="normal">+</a>
+                Widget Chooser
             </h1>
         </div>
     </div>
@@ -26,38 +21,35 @@
 <div class="main general">
     <ul class="list-group">
         <li class="list-group-item">
-            <a href="./pages-list.html">Address Book App</a>
+            <a href="./widgets-heading.html">Heading</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogger</a>
+            <a href="./widgets-image.html">Image</a>
             <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
         <li class="list-group-item">
-            <a href="./pages-list.html">Blogging App</a>
+            <a href="./widgets-youtube.html">Youtube</a>
             <span class="right">
-                <a href="./website-edit.html">
-                    <img src="GearBlue.png" class="miniscule">
-                </a>
-            </span>
-        </li>
-        <li class="list-group-item">
-            <a href="./pages-list.html">Script Testing App</a>
-            <span class="right">
-                <a href="./website-edit.html">
+                <a href="./page-edit.html">
                     <img src="GearBlue.png" class="miniscule">
                 </a>
             </span>
         </li>
     </ul>
+
+    <a href="./widgets-list.html"
+       class="btn btn-block btn-primary">
+        Cancel
+    </a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
