--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -3,6 +3,9 @@
 <h2>Links to Assignment Pages</h2>
 <ul>
     <li>
-        <a href="./assignment1/login.html">Assignment 1</a>
+        <a href="assignment2/login.html">Assignment 2</a>
+    </li>
+    <li>
+        <a href="assignment3/index.html">Assignment 3</a>
     </li>
 </ul>
