--- a/public/assignment/assignment3/index.html
+++ b/public/assignment/assignment3/index.html
@@ -18,6 +18,7 @@
     <!--Controllers-->
     <script src="./views/user/controllers/login.controller.client.js"></script>
     <script src="./views/user/controllers/profile.controller.client.js"></script>
+    <script src="./views/user/controllers/register.controller.client.js"></script>
 
     <!--Stylesheets-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
