--- a/public/assignment/assignment3/index.html
+++ b/public/assignment/assignment3/index.html
@@ -14,17 +14,21 @@
 
     <!--Services-->
     <script src="./services/user.service.client.js"></script>
+    <script src="./services/website.service.client.js"></script>
+    <script src="./services/page.service.client.js"></script>
+    <script src="./services/widget.service.client.js"></script>
 
     <!--Controllers-->
-    <script src="./views/user/controllers/login.controller.client.js"></script>
-    <script src="./views/user/controllers/profile.controller.client.js"></script>
-    <script src="./views/user/controllers/register.controller.client.js"></script>
+    <script src="views/user/controllers/user.controller.client.js"></script>
+    <script src="views/website/controllers/website.controller.client.js"></script>
+    <script src="views/page/controllers/page.controller.client.js"></script>
+    <script src="views/widget/controllers/widget.controller.client.js"></script>
 
     <!--Stylesheets-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
-<body class="withHeader withFooter">
-    <div ng-view></div>
+<body class="withHeader withFooter full">
+    <div ng-view class="full"></div>
 </body>
 </html>
