--- a/public/assignment/assignment3/index.html
+++ b/public/assignment/assignment3/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Assignment 3</title>
 
-    <!--Angular Libs-->
+    <!--Libs-->
     <script src="https://opensource.keycdn.com/angularjs/1.6.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <!--Routing-->
     <script src="./app.js"></script>
