--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -8,4 +8,7 @@
     <li>
         <a href="assignment3/index.html">Assignment 3</a>
     </li>
+    <li>
+        <a href="assignment4/index.html">Assignment 4</a>
+    </li>
 </ul>
