--- a/public/assignment/assignment4/index.html
+++ b/public/assignment/assignment4/index.html
@@ -8,10 +8,19 @@
     <script src="https://opensource.keycdn.com/angularjs/1.6.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script
+            src="https://code.jquery.com/jquery-3.2.1.js"
+            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+            crossorigin="anonymous"></script>
+    <script
+            src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+            integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+            crossorigin="anonymous"></script>
 
-    <!--Routing-->
+    <!--Scripts-->
     <script src="./app.js"></script>
     <script src="./config.js"></script>
+    <script src="./directives/wbdv-sortable.js"></script>
 
     <!--Services-->
     <script src="./services/user.service.client.js"></script>
