--- a/public/assignment/assignment4/index.html
+++ b/public/assignment/assignment4/index.html
@@ -5,8 +5,6 @@
     <title>Assignment 3</title>
 
     <!--Libs-->
-    <script src="https://opensource.keycdn.com/angularjs/1.6.5/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script
             src="https://code.jquery.com/jquery-3.2.1.js"
@@ -16,6 +14,8 @@
             src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
             integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
             crossorigin="anonymous"></script>
+    <script src="https://opensource.keycdn.com/angularjs/1.6.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
 
     <!--Scripts-->
     <script src="./app.js"></script>
@@ -27,6 +27,7 @@
     <script src="./services/website.service.client.js"></script>
     <script src="./services/page.service.client.js"></script>
     <script src="./services/widget.service.client.js"></script>
+    <script src="./services/flickr.service.client.js"></script>
 
     <!--Controllers-->
     <script src="views/user/controllers/user.controller.client.js"></script>
