--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -11,4 +11,7 @@
     <li>
         <a href="assignment4/index.html">Assignment 4</a>
     </li>
+    <li>
+        <a href="assignment5/index.html">Assignment 5</a>
+    </li>
 </ul>
