--- a/public/assignment/assignment5/index.html
+++ b/public/assignment/assignment5/index.html
@@ -6,16 +6,17 @@
 
     <!--Libs-->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script
-            src="https://code.jquery.com/jquery-3.2.1.js"
+    <script src="https://code.jquery.com/jquery-3.2.1.js"
             integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
             crossorigin="anonymous"></script>
-    <script
-            src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
             integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
             crossorigin="anonymous"></script>
     <script src="https://opensource.keycdn.com/angularjs/1.6.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
+    <script src="../../vendor/textAngular/js/textAngular-rangy.min.js"></script>
+    <script src="../../vendor/textAngular/js/textAngular.min.js"></script>
+    <script src="../../vendor/textAngular/js/textAngular-sanitize.min.js"></script>
 
     <!--Scripts-->
     <script src="./app.js"></script>
@@ -36,6 +37,7 @@
     <script src="views/widget/controllers/widget.controller.client.js"></script>
 
     <!--Stylesheets-->
+    <link href="../../vendor/textAngular/css/textAngular.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
