--- a/public/project/index.html
+++ b/public/project/index.html
@@ -29,10 +29,19 @@
         <script src="./config.js"></script>
 
         <!-- Controllers -->
-        <script src="./controllers/search.controller.client.js"></script>
-        <script src="./controllers/details.controller.client.js"></script>
+            <!-- General -->
+                <script src="./views/generalPages/controllers/home-page.controller.client.js"></script>
+            <!-- User -->
+                <script src="./views/userPages/controllers/login-page.controller.client.js"></script>
+                <script src="./views/userPages/controllers/register-page.controller.client.js"></script>
+            <!-- Movie -->
+                <script src="views/generalPages/controllers/search.controller.client.js"></script>
+                <script src="./views/moviePages/controllers/details.controller.client.js"></script>
+            <!-- Admin -->
 
         <!-- Services -->
         <script src="./services/movie.service.client.js"></script>
+        <script src="./services/user.service.client.js"></script>
+
     <!-- /Javascript -->
 </html>
