--- a/public/project/index.html
+++ b/public/project/index.html
@@ -35,6 +35,7 @@
                 <script src="./views/userPages/controllers/login-page.controller.client.js"></script>
                 <script src="./views/userPages/controllers/register-page.controller.client.js"></script>
                 <script src="views/userPages/controllers/account-page.controller.client.js"></script>
+                <script src="views/userPages/controllers/profile-page.controller.client.js"></script>
             <!-- Movie -->
                 <script src="views/generalPages/controllers/search-page.controller.client.js"></script>
                 <script src="views/moviePages/controllers/movie-page.controller.client.js"></script>
@@ -43,6 +44,7 @@
         <!-- Services -->
         <script src="./services/movie.service.client.js"></script>
         <script src="./services/user.service.client.js"></script>
+        <script src="./services/tag.service.client.js"></script>
 
     <!-- /Javascript -->
 </html>
