--- a/public/project/index.html
+++ b/public/project/index.html
@@ -34,11 +34,13 @@
             <!-- User -->
                 <script src="./views/userPages/controllers/login-page.controller.client.js"></script>
                 <script src="./views/userPages/controllers/register-page.controller.client.js"></script>
-                <script src="views/userPages/controllers/account-page.controller.client.js"></script>
-                <script src="views/userPages/controllers/profile-page.controller.client.js"></script>
+                <script src="./views/userPages/controllers/account-page.controller.client.js"></script>
+                <script src="./views/userPages/controllers/profile-page.controller.client.js"></script>
             <!-- Movie -->
-                <script src="views/generalPages/controllers/search-page.controller.client.js"></script>
-                <script src="views/moviePages/controllers/movie-page.controller.client.js"></script>
+                <script src="./views/generalPages/controllers/search-page.controller.client.js"></script>
+                <script src="./views/moviePages/controllers/movie-page.controller.client.js"></script>
+                <script src="./views/moviePages/controllers/tag-page.controller.client.js"></script>
+                <script src="./views/moviePages/controllers/editTag-page.controller.client.js"></script>
             <!-- Admin -->
 
         <!-- Services -->
