--- a/public/project/index.html
+++ b/public/project/index.html
@@ -42,6 +42,9 @@
                 <script src="./views/moviePages/controllers/tag-page.controller.client.js"></script>
                 <script src="./views/moviePages/controllers/editTag-page.controller.client.js"></script>
             <!-- Admin -->
+                <script src="./views/adminPages/controllers/admin-page.controller.client.js"></script>
+                <script src="./views/adminPages/controllers/adminUser-page.controller.client.js"></script>
+                <script src="./views/adminPages/controllers/adminTag-page.controller.client.js"></script>
 
         <!-- Services -->
         <script src="./services/movie.service.client.js"></script>
