--- a/public/project/index.html
+++ b/public/project/index.html
@@ -45,6 +45,7 @@
                 <script src="./views/adminPages/controllers/admin-page.controller.client.js"></script>
                 <script src="./views/adminPages/controllers/adminUser-page.controller.client.js"></script>
                 <script src="./views/adminPages/controllers/adminTag-page.controller.client.js"></script>
+                <script src="./views/adminPages/controllers/adminMovie-page.controller.client.js"></script>
 
         <!-- Services -->
         <script src="./services/movie.service.client.js"></script>
